# F1-PHOTO

./: .gitignore  .tmp_a5_ch1.sse  .tmp_a5_ch1_v2.sse  .tmp_a5_vol1_regen.sse  .tmp_evidence_a4_outline_v2_4096cap_OK.json  .tmp_evidence_d2_async_OK.json  AGENTS.md  PLAN.md  PROJECT_STRUCTURE.md  README.md
.github/workflows/: ci.yml  release.yml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
docs/: TODO-android.md  TODO-deferred.md  api.md  architecture.md  data_model.md  deployment.md  handover-2026-04-29.md  operations.md  permissions.md  plan.md  recognition_pipeline.md  training.md  v1.4.x-v1.5.0-roadmap.md
docs/baselines/: 2-distribution-face-baseline.json  2-distribution-face-rerun-2026-04-29.json  2-distribution-tool-baseline.json  2-distribution-tool-rerun-2026-04-29.json  2a-real-id-photos.json  2a-real-reverse-smoke.json  2c-asia.json  2c-recognition-pr.json  2c-recognition-pr.stale-pre-2c-tune.json  2c-tune-recognition-pr-fix-A2-2026-04-29.json  2c-tune-recognition-pr-fix-A3-2026-04-29.json  2c-tune-recognition-pr-fix-D-percell-2026-04-29.json  2c-tune-recognition-pr-scrfd-10g-2026-04-29.json  2c-tune-recognition-pr.json  5-bootstrap-collector-smoke.json  5-bootstrap-importer-smoke.json  7c-eval-self-wiring-2026-04-29.json  READ_FIRST.md  gallery-quality-audit-2026-04-29.json  scrfd-eastern-fixture-diagnosis-2026-04-29.md
packaging/: README.md
packaging/linux/: env.example  f1photo.service  install.sh
packaging/scripts/: build-release.ps1  build-release.sh  distribution-baseline.sh  fetch-bundled-pg.sh  make-stub-models.py  recognition-pr-baseline.sh  smoke-e2e.sh
packaging/windows/: env.example.cmd  install.cmd
server/: .env.example  Cargo.toml  README.md
server/migrations/: 20260426140000_init.sql  20260426150000_projects_code_partial_unique.sql  20260427234500_model_versions_and_v_training_corrections.sql
server/src/: audit.rs  bundled_pg.rs  cli.rs  config.rs  db.rs  error.rs  finetune.rs  lib.rs  logging.rs  main.rs  retrain.rs  static_assets.rs
server/src/api/: admin.rs  auth.rs  devices.rs  health.rs  mod.rs  persons.rs  photos.rs  projects.rs  recognitions.rs  settings.rs  tools.rs  work_orders.rs
server/src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs
server/src/inference/: mod.rs  models.rs  preprocess.rs  recall.rs  scrfd.rs  yolov8.rs
server/src/worker/: mod.rs
tests/: test_bootstrap_correction_importer.py  test_shadow_eval.py
tests/fixtures/face/: MANIFEST.json  README.md
tests/fixtures/tool/: MANIFEST.json  README.md
tools/: bootstrap_correction_collector.py  bootstrap_correction_importer.py  build_tool_fixture.py  eval_distribution.py  eval_pr.py  ingest_id_photos.py  ingest_id_photos_smoke.sh  retrain_smoke.sh  retrain_train.py  reverse_smoke_id_photos.py  shadow_eval.py  shadow_eval_smoke.sh
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: env.d.ts  main.ts  style.css
web/src/api/: client.ts  master.ts  photos.ts  projects.ts  recognition.ts  (+2 more)
(+39 files in other folders)
