[package]
name = "f1-photo-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[[bin]]
name = "f1photo"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "1"
anyhow = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

async-trait = "0.1"
futures = "0.3"
once_cell = "1"
hex = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = 1
