[package]
name = "f1-photo-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[[bin]]
name = "f1photo"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "1"
anyhow = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

clap = { version = "4", features = ["derive"] }

async-trait = "0.1"
futures = "0.3"
once_cell = "1"
hex = "0.4"
sha2 = "0.10"
moka = { version = "0.12", features = ["future"] }

# ONNX Runtime bindings (M2 turn 9). load-dynamic means we don't need
# libonnxruntime at compile time; at runtime we look for it via
# ORT_DYLIB_PATH or the system loader. Missing libs and missing model files
# are handled gracefully so the dev server still boots without them.
ort = { version = "=2.0.0-rc.9", default-features = false, features = ["load-dynamic", "ndarray"] }
ort-sys = "=2.0.0-rc.9"
ndarray = "0.15"

# Image decode + crop + resize for inference preprocessing (M2 turn 10).
# Limit codec features to keep compile time / binary size reasonable; the
# upload pipeline accepts JPEG / PNG.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = 1
